<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:textAlignment="center"
        tools:context=".screens.Start.StartFragment">


        <TextView
            android:id="@+id/textView_startFragment_welcomeMessage"
            style="@style/editText_startFragment"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:text="@string/startFragment_welcomeMessage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <EditText
            android:id="@+id/editText_startFragment_name"
            style="@style/editText_startFragment"
            android:hint="@string/startFragment_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_startFragment_welcomeMessage"
            app:layout_constraintVertical_bias="0.15" />

        <EditText
            android:id="@+id/editText_startFragment_surname"
            style="@style/editText_startFragment"
            android:hint="@string/startFragment_surname"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_startFragment_name"
            app:layout_constraintVertical_bias="0" />

        <EditText
            android:id="@+id/editText_startFragment_email"
            style="@style/editText_startFragment"
            android:hint="@string/startFragment_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_startFragment_surname"
            app:layout_constraintVertical_bias="0" />

        <EditText
            android:id="@+id/editText_startFragment_code"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_startFragment_all"
            android:hint="@string/startFragment_code"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_startFragment_email"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/startFragment_begin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_startFragment_code"
            app:layout_constraintVertical_bias="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>