<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.Test.TestFragment">


        <TextView
            android:id="@+id/textView_testFragment_name"
            android:layout_width="90dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035" />

        <TextView
            android:id="@+id/textView_testFragment_surname"
            android:layout_width="90dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView_testFragment_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035" />

        <TextView
            android:id="@+id/textView_testFragment_email"
            android:layout_width="180dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toEndOf="@+id/textView_testFragment_surname"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035" />

        <TextView
            android:id="@+id/textView_testFragment_content"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.12" />

        <LinearLayout
            android:id="@+id/linearLayout_testFragment_answerA"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_testFragment_content"
            app:layout_constraintVertical_bias="0.1">

            <TextView
                android:id="@+id/textView_testFragment_answerA"
                android:textAlignment="center"
                android:layout_width="350dp"
                android:layout_height="match_parent" />

            <CheckBox
                android:id="@+id/checkBox_testFragment_answerA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_testFragment_answerB"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_testFragment_answerA"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView_testFragment_answerB"
                android:textAlignment="center"
                android:layout_width="350dp"
                android:layout_height="match_parent" />

            <CheckBox
                android:id="@+id/checkBox_testFragment_answerB"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_testFragment_answerC"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_testFragment_answerB"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView_testFragment_answerC"
                android:textAlignment="center"
                android:layout_width="350dp"
                android:layout_height="match_parent" />

            <CheckBox
                android:id="@+id/checkBox_testFragment_answerC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_testFragment_answerD"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_testFragment_answerC"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView_testFragment_answerD"
                android:textAlignment="center"
                android:layout_width="350dp"
                android:layout_height="match_parent" />

            <CheckBox
                android:id="@+id/checkBox_testFragment_answerD"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_testFragment_answerE"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_testFragment_answerD"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView_testFragment_answerE"
                android:textAlignment="center"
                android:layout_width="350dp"
                android:layout_height="match_parent" />

            <CheckBox
                android:id="@+id/checkBox_testFragment_answerE"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_testFragment_questionCounter"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:text="@string/testFragment_questionCounter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_testFragment_answerE"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:id="@+id/textView_testFragment_timer"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_testFragment_answerE"
            app:layout_constraintVertical_bias="0.33" />

        <Button
            android:id="@+id/button_testFragment_previous"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/testFragment_previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_testFragment_questionCounter"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/button_testFragment_next"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/testFragment_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_testFragment_questionCounter"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/button_testFragment_end"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/button_testFragment_endTest"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_testFragment_questionCounter"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>